HelloUltraviolet/Fixtures/RejectedSource/Expressions/RecordDefaultInit/Expected.uv
//! Expected diagnostic metadata for the RecordDefaultInit rejected-source specimen.

expectedDiagnostic("E-TYP-1911", "rule.16.Record-Default-Init-Err")
